Creating bookShelf